# potatoengine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  TODO.txt  doxygen-config  installation.txt  readme.md  todo.txt
01-01-helloworld_app/: CMakeLists.txt  helloworld.cxx
01-02-hello-lib/: main.cxx
01-02-hello-lib-static/: CMakeLists.txt
01-02-hello-lib-static/lib/: CMakeLists.txt
01-02-hello-lib-static/lib/include/: hellolib.h
01-02-hello-lib-static/lib/src/: hellolib.cxx
01-03-hello-lib-dynamic/: CMakeLists.txt
01-03-hello-lib-dynamic/lib/: CMakeLists.txt  hellolib.cxx
01_01_HelloWorld_app/: CMakeLists.txt  a.out  helloworld.cxx
01_02_Hello_lib/: CMakeLists.txt  hellolib.h  main.cxx
02-01-sdl-dynamic/: CMakeLists.txt
02-02-sdl-static/: CMakeLists.txt  main.cxx
02-sdl-dynamic-and-static/: CMakeLists.txt
02-sdl-dynamic-and-static/dynamic/: CMakeLists.txt
02-sdl-dynamic-and-static/static/: CMakeLists.txt
03-01-sdl-loop/: CMakeLists.txt  main.cxx
03-02-sdl-loop-to-engine/: CMakeLists.txt  engine.cpp  engine.h  main.cxx
03-02-sdl-loop-to-engine/engine/: CMakeLists.txt  engine.cxx
03-02-sdl-loop-to-engine/engine/include/: engine.h  engine_sdl.h  engine_utils.h  game_object.h  input_manager.h  key_code.h
03-02-sdl-loop-to-engine/engine/src/: engine.cxx  engine_sdl.cxx  engine_sdl.h  engine_utils.h  event.h  game_object.cpp  game_object.cxx  input_manager.cxx  input_manager.h
03-02-sdl-loop-to-engine/game/: CMakeLists.txt  game.cxx  input_printer.h
04-00-rendering/: CMakeLists.txt  SDL_Loop.cpp  color.cpp  color.hpp  draw_line_tests.cpp  draw_utils.hpp  image.cpp  math_utils.hpp  point_array.cpp  points_mesh.cpp  points_mesh.hpp  shader.hpp  vertex.hpp
04-01-opengl/: CMakeLists.txt
04-01-opengl/engine/: CMakeLists.txt  shader01.vert
04-01-opengl/engine/ext/: CMakeLists.txt  picopng.hpp
04-01-opengl/engine/ext/imgui/: imgui.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
04-01-opengl/engine/include/: camera.hpp  engine.hpp  engine_sdl.h  file_utils.hpp  game_object.h  game_object.hpp  game_objects_list.hpp  input_manager.h  input_manager.hpp  key_code.hpp  light.hpp  log_utils.hpp  math.hpp  mesh.hpp  mesh_old.hpp  model.hpp  movable_object.hpp  read_obj.hpp  texture.hpp  texture_image.hpp  transformation.hpp  vector3d.hpp  vertex.hpp
04-01-opengl/engine/include/ptm/: glm_to_ptm.hpp  math.hpp  matrix.hpp  vec2.hpp  vec3.hpp  vec4.hpp
04-01-opengl/engine/src/: audio_component.cpp  audio_component.hpp  camera.cpp  engine.cpp  engine.cxx  engine_sdl.cpp  engine_sdl.hpp  engine_utils.cpp  engine_utils.hpp  file_utils.cpp  game_object.cpp  game_object.cxx  game_objects_list.cpp  gui_component.cpp  gui_component.hpp  input_component.cpp  input_component.hpp  input_manager.cpp  input_manager.cxx  log_utils.cpp  material.hpp  mesh.cpp  model.cpp  model.hpp  model_utils.cpp  model_utils.hpp  movable_object.cpp  physics_component.cpp  physics_component.hpp  read_obj.cpp  texture_image.cpp  video_component.cpp  video_component.hpp  video_component_opengl.cpp  video_component_opengl.hpp
04-01-opengl/engine/src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
04-01-opengl/engine/src/renderer/: debug_drawer.cpp  debug_drawer.hpp  opengl_utils.cpp  opengl_utils.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  renderer_opengl.cpp  renderer_opengl.hpp  shader.cpp  shader.hpp  shader01.frag  shader01.vert  triangle.hpp  vb_builder.hpp  vertex.hpp  vertex_buffer.cpp  vertex_buffer.hpp
04-01-opengl/engine/src/renderer/shaders/: generic_shader.frag  generic_shader.vert  light_shader.frag  light_shader.vert
04-01-opengl/ext/: CMakeLists.txt
04-01-opengl/ext/imgui/: imgui.h  imgui_demo.cpp  imstb_rectpack.h  imstb_textedit.h
04-01-opengl/game/: CMakeLists.txt  camera_constoller.hpp  game.cpp  game.cxx  input_printer.h  input_printer.hpp  show_fps.hpp  space_ship.hpp
04-01-opengl/game/game_objects/: audio_test.hpp  camera_controller.hpp  camera_gui_controller.hpp  camera_keyboard_controller.hpp  cube.hpp  light.hpp  light_controller.hpp  object_creator.hpp  object_selector.hpp  show_fps.hpp  space_ship.hpp  utils.cpp  utils.hpp  vehicle.hpp
04-01-opengl/game/game_objects/editor/: mode_switcher.hpp  object_creator.hpp  object_selector.hpp
04-01-opengl/game/game_objects/game/: enemies_spawer.hpp  enemy.cpp  enemy.hpp  player.hpp
04-01-opengl/game/res/: figure.blend  figure.mtl
04-01-opengl/game/res/cube/: cube_leopard.mtl  cube_smooth.mtl
04-01-opengl/game/scenes/: level01.yaml  level01.yml
04-rendering/: CMakeLists.txt  SDL_Loop.cpp  SDL_Loop.hpp  color.cpp  color.h  color.hpp  draw_line_tests.cpp  draw_line_tests.h  draw_line_tests.hpp  draw_utils.cpp  draw_utils.h  draw_utils.hpp  image.cpp  image.h  image.hpp  main.cpp  main.cxx  math_utils.hpp  mesh.hpp  point.cpp  point.h  point.hpp  point_array.cpp  point_array.hpp  points_mesh.hpp  shader.hpp  vertex.hpp
05-audio/: CMakeLists.txt  main_audio.cpp
99-sandbox/: CMakeLists.txt  main.cpp
doc/: gameobject-schema.txt
engine/: CMakeLists.txt
engine/include/: component.hpp  cubemesh.hpp  engine.hpp  file_utils.hpp  game_object.hpp  game_objects_list.hpp  log_utils.hpp  mesh.hpp  model.hpp  movable_object.hpp  ptexception.hpp  texture.hpp  transformation.hpp  vertex.hpp
engine/include/ptm/: glm_to_ptm.hpp  math.hpp  matrix.hpp  vec3.hpp  vec4.hpp
engine/src/: audio_component.cpp  cubemesh.cpp  engine.cpp  engine_utils.hpp  file_utils.cpp  game_object.cpp  input_component.cpp  input_component.hpp  log_utils.cpp  model_utils.cpp  movable_object.cpp  physics_component.cpp  physics_component.hpp  video_component.cpp  video_component_opengl.cpp
engine/src/imgui/: imgui_impl_sdl.cpp  imgui_impl_sdl.h
engine/src/renderer/: opengl_utils.cpp  opengl_utils.hpp  program.cpp  (+3 more)
game/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
game/game_objects/: show_fps.hpp  space_ship.hpp  utils.hpp  vehicle.hpp
game/res/: military_vehicle_2.mtl  two_faces.mtl
game/scenes/: level01.yaml
(+8 files in other folders)
