cmake_minimum_required(VERSION 3.7)

project(gamedev-swat)

#add_subdirectory(01-01-helloworld_app)
#add_subdirectory(01-02-hello-lib-static)
#add_subdirectory(01-03-hello-lib-dynamic)

#add_subdirectory(02-sdl-dynamic-and-static)

#add_subdirectory(03-01-sdl-loop)
#add_subdirectory(03-02-sdl-loop-to-engine)

#add_subdirectory(04-00-rendering)
add_subdirectory(04-01-opengl)

add_subdirectory(05-audio)

#add_subdirectory(99-sandbox)